Initial implementation of the multipole tensor recursion using SIMD operations in both the Global and QI frames